# wifi-connect

./: .gitignore  Cargo.toml  run_debug.sh  run_test.sh
src/: config.rs  dnsmasq.rs  errors.rs  exit.rs  hostapd.rs  hostpad.rs  logger.rs  main.rs  network.rs  privileges.rs  server.rs
ui/: index.html
ui-configmode/: index.html
ui-configmode/js/: index.js
ui/css/: bootstrap-ipaddress.css
ui/js/: bootstrap-ipaddress.js  index.js
